# ersilia-pack

./: .dockerignore  .pre-commit-config.yaml  README.md  artifact.py  async_pipeline.sh  pipeline.sh  pyproject.toml  ruff.toml  setup.py
.github/workflows/: upload-ersiliapack-to-dockerhub.yml
dockerfiles/: Dockerfile  local.md
parser/: __init__.py  dockerfile_install_parser.py  install_parser.py  metadata_yml2json_converter.py  yaml_install_parser.py
parsers/: __init__.py  dockerfile_install_parser.py  install_parser.py  yaml_install_parser.py
src/: __init__.py  linter.py  packer.py  parsers.py  server.py  server.sh
src/ersilia_pack/: __init__.py  linter.py  packer.py  parsers.py  server.py  utils.py
src/templates/: app.py  run_uvicorn.py  utils.py
src/utils/: app_template.py  run_uvicorn_template.py
tests/: __init__.py  conftest.py  noxfile.py  test_FastApiPacker.py  test_MetadataYml2JsonConverter.py  test_SimpleModelLinter.py  test_dockerfile_install_parser.py  test_dockerfile_install_parser_output.txt  test_json_orient.py  test_model_version.py  test_yaml_install_parser.py
tests/Models/: Readme.md  incorrect_metadata.yml  valid_metadata.yml
tests/api/: info.txt  test_cors.py  test_ratelimit.py
tests/data/: complex_dockerfile.sh  complex_dockerfile.txt  complex_install.sh  complex_install.yml  input.csv  invalid_dockerfile.txt  invalid_install.yml  output_bash.csv  payload.json  simple_dockerfile.sh  simple_dockerfile.txt  simple_install.sh  simple_install.yml
tests/fixtures/: Dockerfile.txt  correct_metadata.yml  eos4e40_Dockerfile.txt  (+3 more)
(+27 files in other folders)
