[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ersilia-pack"
version = "1.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "PyYAML",
    "uvicorn[standard]",
    "slowapi",
    "pybreaker",
    "redis",
    "psutil",
    "orjson",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ersilia_pack" = ["templates/*.py", "templates/input_schemas/*/*.py", "templates/*/*.txt"]

[project.scripts]
ersilia_model_pack = "ersilia_pack.packer:main"
ersilia_model_serve = "ersilia_pack.server:main"
ersilia_model_lint = "ersilia_pack.linter:main"